crates/rumps-query/snapshots/scripts__155_iter_constraint.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "; Iter module: works on any Iterable (Array[T] or Range)\n\nfun main() {\n  ; Iterable:length on Array\n  let arr = [1, 2, 3, 4, 5]\n  write \"Array length: {Iterable:length(arr)}\"\n\n  ; Iterable:length on Range\n  write \"Range (1..=10) length: {Iterable:length(1 ..= 10)}\"\n  write \"Range (1..10) length: {Iterable:length(1 .. 10)}\"\n\n  ; contains on Array\n  write \"Array contains 3: {contains(arr, 3)}\"\n  write \"Array contains 99: {contains(arr, 99)}\"\n\n  ; contains on Range\n  write \"Range contains 5: {contains(1 ..= 10, 5)}\"\n  write \"Range contains 11: {contains(1 ..= 10, 11)}\"\n\n  ; Mappable:map on Array (Range is not Mappable; collect first)\n  write \"Doubled array: {Mappable:map(x => x * 2, arr)}\"\n  write \"Doubled range: {Mappable:map(x => x * 2, Iterable:collect(1 ..= 5))}\"\n\n  ; Filterable:filter on Array and Range\n  write \"Evens from array: {Filterable:filter(x => x % 2 == 0, arr)}\"\n  write \"Evens from range: {Filterable:filter(x => x % 2 == 0, 1 ..= 10)}\"\n\n  ; Foldable:reduce on Array and Range\n  write \"Sum of array: {Foldable:reduce((a, x) => a + x, 0, arr)}\"\n  write \"Sum of range: {Foldable:reduce((a, x) => a + x, 0, 1 ..= 10)}\"\n\n  write \"Generic sum (array): {sum-iter(arr)}\"\n  write \"Generic sum (range): {sum-iter(1 ..= 10)}\"\n\n  write \"Generic count (array): {count-iter(arr)}\"\n  write \"Generic count (range): {count-iter(1 ..= 10)}\"\n\n  ; `Reversible:reverse` on `Array` and `Range`\n  write \"Reversed array: {Reversible:reverse(arr)}\"\n  write \"Reversed range: {Reversible:reverse(1 ..= 5)}\"\n\n  ; foreach on Array and Range (Range must be collected first)\n  foreach(x => write \"foreach array: {x}\", [10, 20])\n  foreach(x => write \"foreach range: {x}\", Iterable:collect(1 ..= 3))\n}\n\n; Generic functions with Iterable constraint\nfun sum-iter[I: Iterable](i: I[Int]) -> Int {\n  Foldable:reduce((a, x) => a + x, 0, i)\n}\n\nfun count-iter[I: Iterable](i: I[Int]) -> Int {\n  Iterable:length(i)\n}\n"
---
"Array length: 5"
"Range (1..=10) length: 10"
"Range (1..10) length: 9"
"Array contains 3: true"
"Array contains 99: false"
"Range contains 5: true"
"Range contains 11: false"
"Doubled array: [ 2, 4, 6, 8, 10 ]"
"Doubled range: [ 2, 4, 6, 8, 10 ]"
"Evens from array: [ 2, 4 ]"
"Evens from range: [ 2, 4, 6, 8, 10 ]"
"Sum of array: 15"
"Sum of range: 55"
"Generic sum (array): 15"
"Generic sum (range): 55"
"Generic count (array): 5"
"Generic count (range): 10"
"Reversed array: [ 5, 4, 3, 2, 1 ]"
"Reversed range: 5 ..= 1"
"foreach array: 10"
"foreach array: 20"
"foreach range: 1"
"foreach range: 2"
"foreach range: 3"
