crates/rumps-query/snapshots/scripts__155_iter_module.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "; Iter module: works on any Iterable[T] (Array[T] or Range)\n\n; Iter.length on Array\nLET arr = [1, 2, 3, 4, 5]\nWRITE \"Array length: {Iter.length(arr)}\"\n\n; Iter.length on Range\nWRITE \"Range (1..=10) length: {Iter.length(1 ..= 10)}\"\nWRITE \"Range (1..10) length: {Iter.length(1 .. 10)}\"\n\n; Iter.contains on Array\nWRITE \"Array contains 3: {Iter.contains(arr, 3)}\"\nWRITE \"Array contains 99: {Iter.contains(arr, 99)}\"\n\n; Iter.contains on Range\nWRITE \"Range contains 5: {Iter.contains(1 ..= 10, 5)}\"\nWRITE \"Range contains 11: {Iter.contains(1 ..= 10, 11)}\"\n\n; Iter.map on Array and Range\nWRITE \"Doubled array: {Iter.map(x => x * 2, arr)}\"\nWRITE \"Doubled range: {Iter.map(x => x * 2, 1 ..= 5)}\"\n\n; Iter.filter on Array and Range\nWRITE \"Evens from array: {Iter.filter(x => x % 2 == 0, arr)}\"\nWRITE \"Evens from range: {Iter.filter(x => x % 2 == 0, 1 ..= 10)}\"\n\n; Iter.reduce on Array and Range\nWRITE \"Sum of array: {Iter.reduce((a, x) => a + x, 0, arr)}\"\nWRITE \"Sum of range: {Iter.reduce((a, x) => a + x, 0, 1 ..= 10)}\"\n\n; Generic functions with Iterable constraint\nFUN sum-iter[I: Iterable[Int]](i: I) -> Int {\n  Iter.reduce((a, x) => a + x, 0, i)\n}\n\nWRITE \"Generic sum (array): {sum-iter(arr)}\"\nWRITE \"Generic sum (range): {sum-iter(1 ..= 10)}\"\n\nFUN count-iter[I: Iterable[Int]](i: I) -> Int {\n  Iter.length(i)\n}\n\nWRITE \"Generic count (array): {count-iter(arr)}\"\nWRITE \"Generic count (range): {count-iter(1 ..= 10)}\"\n\n; Iter.reverse on Array and Range\nWRITE \"Reversed array: {Iter.reverse(arr)}\"\nWRITE \"Reversed range: {Iter.reverse(1 ..= 5)}\"\n\n; Iter.foreach on Array and Range\nIter.foreach(x => WRITE \"foreach array: {x}\", [10, 20])\nIter.foreach(x => WRITE \"foreach range: {x}\", 1 ..= 3)\n"
---
"Array length: 5"
"Range (1..=10) length: 10"
"Range (1..10) length: 9"
"Array contains 3: TRUE"
"Array contains 99: FALSE"
"Range contains 5: TRUE"
"Range contains 11: FALSE"
"Doubled array: [ 2, 4, 6, 8, 10 ]"
"Doubled range: [ 2, 4, 6, 8, 10 ]"
"Evens from array: [ 2, 4 ]"
"Evens from range: [ 2, 4, 6, 8, 10 ]"
"Sum of array: 15"
"Sum of range: 55"
"Generic sum (array): 15"
"Generic sum (range): 55"
"Generic count (array): 5"
"Generic count (range): 10"
"Reversed array: [ 5, 4, 3, 2, 1 ]"
"Reversed range: [ 5, 4, 3, 2, 1 ]"
"foreach array: 10"
"foreach array: 20"
"foreach range: 1"
"foreach range: 2"
"foreach range: 3"
