crates/rumps-query/snapshots/scripts__158_try_into_constraint_err.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "; Test TryInto constraint errors\n\nfun main() {\n  let f = (x: Int) -> Int => x + 1\n  write bad-read(f)\n}\n\n; Function types cannot satisfy TryInto\nfun bad-read[T: TryInto[Int]](x: T) -> Result[Int, String] {\n  x read Int\n}\n"
---
ERROR: cannot `read` `(Int) -> Int` as `Int`
