crates/rumps-query/snapshots/scripts__159_word_negate_err.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "; Test: negating a Word is a type error (Word is unsigned)\n\nfun main() {\n  write -(10: Word)\n}\n"
---
ERROR: type `Word` does not satisfy `Negatable` class
