crates/rumps-query/snapshots/scripts__160_pipe_placeholder_err.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "; Pipe placeholder `.` must only appear in call arguments on RHS of `|>`\n\nFUN main() {\n  ; Error: placeholder outside pipe context\n  LET x = .\n}\n"
---
ERROR: parse error at 141..142: pipe placeholder `.` can only appear in call arguments on RHS of `|>`
