crates/rumps-query/snapshots/scripts__161_class_method_values.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "; Class methods as first-class values and pipe integration\n\nfun main() {\n  ; Class methods can be referenced as values\n  let add-fn = Numeric:add\n  let neg-fn = Negatable:neg\n  let cmp-fn = Ord:compare\n\n  ; Invoke method references directly\n  write \"add-fn(3, 4) = {add-fn(3, 4)}\"\n  write \"neg-fn(-5) = {neg-fn(-5)}\"\n  write \"cmp-fn(1, 2) = {cmp-fn(1, 2)}\"\n\n  ; Pass method references to higher-order functions\n  let nums = [1, 2, 3, 4, 5]\n\n  ; Use Numeric:add in reduce\n  let sum = Foldable:reduce(add-fn, 0, nums)\n  write \"Sum via add-fn: {sum}\"\n\n  ; Pipe with class methods (multi-arg wrapped in closures)\n  let pipe-add = 10 |> (x => Numeric:add(x, 5))\n  let pipe-sub = 10 |> (x => Numeric:sub(x, 3))\n  let pipe-mul = 4 |> (x => Numeric:mul(x, 5))\n  write \"Pipe add: {pipe-add}\"\n  write \"Pipe sub: {pipe-sub}\"\n  write \"Pipe mul: {pipe-mul}\"\n\n  ; Closure in second position\n  let pipe-add2 = 5 |> (x => Numeric:add(10, x))\n  let pipe-sub2 = 3 |> (x => Numeric:sub(10, x))\n  write \"Pipe add (second): {pipe-add2}\"\n  write \"Pipe sub (second): {pipe-sub2}\"\n\n  ; Chain pipes with class methods\n  let chained = 5\n    |> (x => Numeric:add(x, 3))\n    |> (x => Numeric:mul(x, 2))\n  write \"Chained: {chained}\"\n\n  ; Pipe into HoF class methods\n  let piped-map = nums |> (a => Mappable:map(x => x * 2, a))\n  let piped-filter = nums |> (a => Filterable:filter(x => x > 2, a))\n  let piped-reduce = nums |> (a => Foldable:reduce((acc, x) => acc + x, 0, a))\n  write \"Piped map: {piped-map}\"\n  write \"Piped filter: {piped-filter}\"\n  write \"Piped reduce: {piped-reduce}\"\n\n  ; Iterable methods with pipes (unary; no wrapper needed)\n  write \"Piped length: {nums |> Iterable:length}\"\n  write \"Piped reverse: {nums |> Iterable:reverse}\"\n\n  ; Iterable:contains with wrapper closure\n  let piped-contains = nums |> (a => Iterable:contains(a, 3))\n  write \"Piped contains: {piped-contains}\"\n\n  ; Monoid methods with pipes\n  let piped-concat = [1, 2] |> (a => Monoid:concat(a, [3, 4]))\n  let hello = \"hello\"\n  let world = \" world\"\n  let piped-str-concat = hello |> (s => Monoid:concat(s, world))\n  write \"Piped concat: {piped-concat}\"\n  write \"Piped string concat: {piped-str-concat}\"\n\n  ; Fallible methods with pipes (unary; no wrapper)\n  let opt = Option.Some(42)\n  write \"Piped unwrap: {opt |> Fallible:unwrap}\"\n\n  ; Indexable methods with pipes\n  let piped-index = nums |> (a => Indexable:index(a, 2))\n  let piped-get = nums |> (a => Indexable:get(a, 1))\n  write \"Piped index: {piped-index}\"\n  write \"Piped get: {piped-get}\"\n\n  ; Complex pipeline combining multiple class methods\n  let result = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n    |> (a => Filterable:filter(x => x % 2 == 0, a))\n    |> (a => Mappable:map(x => x * x, a))\n    |> (a => Foldable:reduce((acc, x) => acc + x, 0, a))\n  write \"Complex pipeline (sum of squares of evens): {result}\"\n\n  ; Method reference stored and used later\n  let len-fn = Iterable:length\n  write \"Stored length fn: {len-fn([1, 2, 3, 4])}\"\n  write \"Stored length fn (range): {len-fn(1 ..= 100)}\"\n\n  ; Ord compare with closures\n  let cmp1 = 5 |> (x => Ord:compare(x, 3))\n  let cmp2 = 5 |> (x => Ord:compare(x, 5))\n  let cmp3 = 3 |> (x => Ord:compare(x, 5))\n  write \"Compare gt: {cmp1}\"\n  write \"Compare eq: {cmp2}\"\n  write \"Compare lt: {cmp3}\"\n\n  ; Store method reference and use in higher-order context\n  let arr-concat-fn = Monoid:concat\n  let arrs = [[1], [2, 3], [4, 5, 6]]\n  let flattened = Foldable:reduce(arr-concat-fn, [], arrs)\n  write \"Flattened arrays: {flattened}\"\n\n  ; Same with strings\n  let str-concat-fn = Monoid:concat\n  let words = [\"hello\", \" \", \"world\"]\n  let joined = Foldable:reduce(str-concat-fn, \"\", words)\n  write \"Joined words: {joined}\"\n\n  ; BitLike operations\n  let bit-and-fn = BitLike:bit-and\n  let bit-or-fn = BitLike:bit-or\n  write \"bit-and(7, 3) = {bit-and-fn(7, 3)}\"\n  write \"bit-or(4, 2) = {bit-or-fn(4, 2)}\"\n\n  ; Negatable (separate bindings to avoid polymorphic instantiation issues)\n  let neg-int = Negatable:neg\n  let neg-float = Negatable:neg\n  write \"neg(-42) = {neg-int(-42)}\"\n  write \"neg(3.14) = {neg-float(3.14)}\"\n}\n"
---
"add-fn(3, 4) = 7"
"neg-fn(-5) = 5"
"cmp-fn(1, 2) = -1"
"Sum via add-fn: 15"
"Pipe add: 15"
"Pipe sub: 7"
"Pipe mul: 20"
"Pipe add (second): 15"
"Pipe sub (second): 7"
"Chained: 16"
"Piped map: [ 2, 4, 6, 8, 10 ]"
"Piped filter: [ 3, 4, 5 ]"
"Piped reduce: 15"
"Piped length: 5"
"Piped reverse: [ 5, 4, 3, 2, 1 ]"
"Piped contains: true"
"Piped concat: [ 1, 2, 3, 4 ]"
"Piped string concat: hello world"
"Piped unwrap: 42"
"Piped index: 3"
"Piped get: Option.Some(2)"
"Complex pipeline (sum of squares of evens): 220"
"Stored length fn: 4"
"Stored length fn (range): 100"
"Compare gt: 1"
"Compare eq: 0"
"Compare lt: -1"
"Flattened arrays: [ 1, 2, 3, 4, 5, 6 ]"
"Joined words: hello world"
"bit-and(7, 3) = 3"
"bit-or(4, 2) = 6"
"neg(-42) = 42"
"neg(3.14) = -3.14"
