crates/rumps-query/snapshots/scripts__163_convert_method_ref_error.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "; Convert method references require type parameters\n\nfun main() {\n  ; This should error: Wrappable:wrap without type parameter\n  let _ = Wrappable:wrap\n}\n"
---
ERROR: convert method `Wrappable:wrap` requires type parameter
